@@ -3,23 +3,16 @@ package com.mygdx.game.map.blocks;
 import static com.mygdx.game.GameSettings.MAP_HEIGHT;
 import static com.mygdx.game.GameSettings.MAP_WIDTH;
 
-import com.mygdx.game.screens.GameScreen;
-
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Objects;
 import java.util.Random;
 
 public class GenerateMap {
-    private static Random random;
+    private static Random random = new Random();
 
-//    private static int mapWidth = MAP_WIDTH, mapHeight = MAP_HEIGHT;
     public BasicBlock[][] mapArray;
 
     public GenerateMap(){
-        random = new Random();
-
         mapArray = new BasicBlock[MAP_WIDTH][MAP_HEIGHT];
 
         for (int i = 0; i < MAP_HEIGHT; i++)
@@ -41,10 +34,9 @@ public class GenerateMap {
         if (map[x][y] == null) {
             ArrayList<Integer> blocksX = new ArrayList<>();
             ArrayList<Integer> blocksY = new ArrayList<>();
-
             try {
-
-                map[x][y] = block.newInstance();
+                BasicBlock blockConstructor = block.getConstructor().newInstance();
+                map[x][y] = blockConstructor;
                 blocksX.add(x);
                 blocksY.add(y);
                 int countOfUnGenerated = 1;
@@ -53,21 +45,21 @@ public class GenerateMap {
                 while (countOfUnGenerated != 0) {
                     countOfUnGenerated--;
                     for (int i = 0; i < 4; i++) {
-                        int xc = blocksX.get(counter) + (1 - i) * ((i + 1) % 2);
-                        int yc = blocksY.get(counter) + (2 - i) * (i % 2);
-                        if (random.nextInt(4) == 0 && !isThereBlock(xc, yc, blocksX, blocksY) &&
-                                xc >= 0 && xc < MAP_WIDTH && yc >= 0 && yc < MAP_HEIGHT) {
-                            if (map[xc][yc] == null) {
+                        int clusterX = blocksX.get(counter) + (1 - i) * ((i + 1) % 2);
+                        int clusterY = blocksY.get(counter) + (2 - i) * (i % 2);
+                        if (random.nextInt(4) == 0 && !isThereBlock(clusterX, clusterY, blocksX, blocksY) &&
+                                clusterX >= 0 && clusterX < MAP_WIDTH && clusterY >= 0 && clusterY < MAP_HEIGHT) {
+                            if (map[clusterX][clusterY] == null) {
                                 countOfUnGenerated++;
-                                blocksX.add(xc);
-                                blocksY.add(yc);
-                                map[xc][yc] = block.newInstance();
+                                blocksX.add(clusterX);
+                                blocksY.add(clusterY);
+                                map[clusterX][clusterY] = blockConstructor;
                             }
                         }
                     }
                     counter++;
                 }
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
                 e.printStackTrace();
             }
         }
@@ -80,7 +72,7 @@ public class GenerateMap {
         return false;
     }
 
-    private static int map(float getMin,  float getMax, float setMin, float setMax, float value){
+    private static int map(int getMin,  int getMax, float setMin, float setMax, float value){
         return Math.round((value - getMin + 1) / (getMax - getMin + 1) * (setMax - setMin + 1) + setMin - 1);
     }
 }
